--- a/css/root.css
+++ b/css/root.css
@@ -42,12 +42,94 @@
     font-size: 20px;
     background-color: #f1f1f1;
     max-width: 100%;
+    margin: 0px;
     /*overflow-x: hidden;*/
+    background-image: url("/images/Ellipse1.svg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: black;
+  }
+
+  nav {
+    max-width: 100%;
+    height: 80px;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .navbar {
+    width: 95%;
+    border-bottom: 2px solid black;
+    display: flex;
+    flex-direction: row;
+    background-color: lightblue;
+    justify-content: space-between;
+  }
+
+  .navbar-navigation {
+    font-size: 14px;
+    font-weight: bold;
+    width: 40%;
+    height: 100%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
   }
 }
 
 /* -- Ipad Pro -- */
-@media screen and (min-width: 450px) and (max-width: 991px) {
+@media screen and (min-width: 450px) and (max-width: 1024px) {
+  body,
+  html {
+    font-family: "HelveticaNeue", sans-serif;
+    font-size: 20px;
+    background-color: #f1f1f1;
+    max-width: 100%;
+    margin: 0px;
+    /*overflow-x: hidden;*/
+    background-image: url("/images/Ellipse_Tablet.svg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: black;
+  }
+
+  nav {
+    max-width: 100%;
+    height: 80px;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .navbar {
+    width: 95%;
+    border-bottom: 2px solid black;
+    display: flex;
+    flex-direction: row;
+    background-color: lightblue;
+    justify-content: space-between;
+  }
+
+  .navbar-navigation {
+    font-size: 16px;
+    font-weight: bold;
+    width: 40%;
+    height: 100%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
 }
 
 /* -- Tablets -- */
@@ -63,6 +145,42 @@
     background-color: #f1f1f1;
     max-width: 100%;
     /*overflow-x: hidden;*/
+    background-image: url("/images/Ellipse1.svg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: black;
+  }
+
+  nav {
+    max-width: 100%;
+    height: 80px;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .navbar {
+    width: 95%;
+    border-bottom: 2px solid black;
+    display: flex;
+    flex-direction: row;
+    background-color: lightblue;
+    justify-content: space-between;
+  }
+
+  .navbar-navigation {
+    font-size: 20px;
+    font-weight: bold;
+    width: 30%;
+    height: 100%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
   }
 }
 
