--- a/css/root.css
+++ b/css/root.css
@@ -44,9 +44,10 @@
     max-width: 100%;
     margin: 0px;
     /*overflow-x: hidden;*/
-    background-image: url("/images/Ellipse1.svg");
+    background-image: url("/images/Ellipse_Mobile.svg");
     background-attachment: fixed;
     background-repeat: no-repeat;
+    background-size: 100%;
   }
 
   nav a {
@@ -57,7 +58,6 @@
   nav {
     max-width: 100%;
     height: 80px;
-    background-color: lightgray;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -68,7 +68,6 @@
     border-bottom: 2px solid black;
     display: flex;
     flex-direction: row;
-    background-color: lightblue;
     justify-content: space-between;
   }
 
@@ -96,6 +95,7 @@
     background-image: url("/images/Ellipse_Tablet.svg");
     background-attachment: fixed;
     background-repeat: no-repeat;
+    background-size: 100%;
   }
 
   nav a {
@@ -106,7 +106,6 @@
   nav {
     max-width: 100%;
     height: 80px;
-    background-color: lightgray;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -117,7 +116,6 @@
     border-bottom: 2px solid black;
     display: flex;
     flex-direction: row;
-    background-color: lightblue;
     justify-content: space-between;
   }
 
@@ -148,6 +146,7 @@
     background-image: url("/images/Ellipse1.svg");
     background-attachment: fixed;
     background-repeat: no-repeat;
+    background-size: 100%;
   }
 
   nav a {
@@ -158,7 +157,6 @@
   nav {
     max-width: 100%;
     height: 80px;
-    background-color: lightgray;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -169,7 +167,6 @@
     border-bottom: 2px solid black;
     display: flex;
     flex-direction: row;
-    background-color: lightblue;
     justify-content: space-between;
   }
 
