--- a/css/local.css
+++ b/css/local.css
@@ -12,10 +12,116 @@
     max-width: 100%;
     /*overflow-x: hidden;*/
   }
+
+  #hero {
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #hero .container {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+  }
+  #hero .left-section {
+    width: 55%;
+    height: 25vh;
+    /*
+    background-color: rgb(223, 223, 253);
+    border: 1px dashed;
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
+
+  #hero .right-section {
+    width: 45%;
+    height: 25vh;
+    /*background-color: rgb(204, 204, 252);
+    border: 1px dashed;
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
+
+  #hero .left-section .hero-header {
+    /*font-size: 4.5vw;*/
+    font-size: 20px;
+    line-height: 95%;
+    font-weight: bold;
+  }
+
+  #hero .left-section p {
+    font-size: 12px;
+    line-height: 125%;
+  }
 }
 
 /* -- Ipad Pro -- */
-@media screen and (min-width: 450px) and (max-width: 991px) {
+@media screen and (min-width: 450px) and (max-width: 1023px) {
+  body,
+  html {
+    font-family: "HelveticaNeue", sans-serif;
+    color: rgb(32, 32, 32);
+    font-size: 20px;
+    background-color: #f1f1f1;
+    max-width: 100%;
+    /*overflow-x: hidden;*/
+  }
+
+  #hero {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #hero .container {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+  }
+  #hero .left-section {
+    width: 55%;
+    height: 50vh;
+    /*
+    background-color: rgb(223, 223, 253);
+    border: 1px dashed;
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
+
+  #hero .right-section {
+    width: 45%;
+    height: 50vh;
+    /*background-color: rgb(204, 204, 252);
+    border: 1px dashed;
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
+
+  #hero .left-section .hero-header {
+    /*font-size: 4.5vw;*/
+    font-size: 40px;
+    line-height: 95%;
+    font-weight: bold;
+  }
+
+  #hero .left-section p {
+    font-size: 16px;
+    line-height: 125%;
+    width: 70%;
+  }
 }
 
 /* -- Tablets -- */
@@ -27,10 +133,64 @@
   body,
   html {
     font-family: "HelveticaNeue", sans-serif;
+    color: rgb(32, 32, 32);
     font-size: 20px;
     background-color: #f1f1f1;
     max-width: 100%;
     /*overflow-x: hidden;*/
+  }
+
+  #hero {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #hero .container {
+    display: flex;
+    flex-direction: row;
+    width: 1400px;
+    margin-left: 27px;
+    margin-right: 27px;
+  }
+
+  #hero .left-section {
+    width: 55%;
+    height: 70vh;
+    /*
+    background-color: rgb(223, 223, 253);
+    border: 1px dashed;
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
+
+  #hero .right-section {
+    width: 45%;
+    height: 70vh;
+    /*background-color: rgb(204, 204, 252);
+    border: 1px dashed;
+    */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+    padding-top: 35px;
+  }
+
+  #hero .left-section .hero-header {
+    /*font-size: 4.5vw;*/
+    font-size: 75px;
+    line-height: 95%;
+    font-weight: bold;
+  }
+
+  #hero .left-section p {
+    font-size: 20px;
+    line-height: 125%;
+    width: 80%;
   }
 }
 
