--- a/css/root.css
+++ b/css/root.css
@@ -39,15 +39,15 @@
   body,
   html {
     font-family: "HelveticaNeue", sans-serif;
-    font-size: 20px;
     background-color: #f1f1f1;
     max-width: 100%;
+    height: 5000px;
     margin: 0px;
     /*overflow-x: hidden;*/
     background-image: url("/images/Ellipse_Mobile.svg");
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 500px;
+    background-position: right -10px;
   }
 
   nav a {
@@ -61,6 +61,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    font-size: 14px;
+    font-weight: bold;
   }
 
   .navbar {
@@ -72,13 +74,33 @@
   }
 
   .navbar-navigation {
-    font-size: 14px;
-    font-weight: bold;
-    width: 40%;
+    width: 60%;
     height: 100%;
     display: flex; /* establish flex container */
     flex-direction: column; /* make main axis vertical */
     justify-content: center; /* center items vertically, in this case */
+  }
+
+  .navbar-menu {
+    display: none;
+  }
+
+  .navbar-menu-mobile {
+    width: 60%;
+    height: 100%;
+    display: flex; /* establish flex container */
+    flex-direction: row; /* make main axis vertical */
+    justify-content: right; /* center items vertically, in this case */
+  }
+
+  .navbar-menu-mobile img {
+    width: 40px;
+    padding-top: 24px;
+  }
+
+  .navbar-menu-mobile .link {
+    padding-top: 31px;
+    padding-right: 8px;
   }
 }
 
@@ -87,15 +109,15 @@
   body,
   html {
     font-family: "HelveticaNeue", sans-serif;
-    font-size: 20px;
     background-color: #f1f1f1;
     max-width: 100%;
     margin: 0px;
     /*overflow-x: hidden;*/
     background-image: url("/images/Ellipse_Tablet.svg");
-    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100%;
+    background-size: 1000px;
+    background-position: right -50px;
   }
 
   nav a {
@@ -109,6 +131,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    font-size: 16px;
+    font-weight: bold;
   }
 
   .navbar {
@@ -120,13 +144,33 @@
   }
 
   .navbar-navigation {
-    font-size: 16px;
-    font-weight: bold;
     width: 40%;
     height: 100%;
     display: flex; /* establish flex container */
     flex-direction: column; /* make main axis vertical */
     justify-content: center; /* center items vertically, in this case */
+  }
+
+  .navbar-menu {
+    display: none;
+  }
+
+  .navbar-menu-mobile {
+    width: 60%;
+    height: 100%;
+    display: flex; /* establish flex container */
+    flex-direction: row; /* make main axis vertical */
+    justify-content: right; /* center items vertically, in this case */
+  }
+
+  .navbar-menu-mobile img {
+    width: 40px;
+    padding-top: 24px;
+  }
+
+  .navbar-menu-mobile .link {
+    padding-top: 31px;
+    padding-right: 8px;
   }
 }
 
@@ -144,9 +188,9 @@
     max-width: 100%;
     /*overflow-x: hidden;*/
     background-image: url("/images/Ellipse1.svg");
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 2000px;
+    background-position: right -300px;
   }
 
   nav a {
@@ -160,6 +204,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
   }
 
   .navbar {
@@ -171,13 +217,43 @@
   }
 
   .navbar-navigation {
-    font-size: 20px;
-    font-weight: bold;
     width: 30%;
     height: 100%;
     display: flex; /* establish flex container */
     flex-direction: column; /* make main axis vertical */
     justify-content: center; /* center items vertically, in this case */
+  }
+
+  .navbar-menu {
+    width: 60%;
+    height: 100%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
+
+  .navbar-menu ul {
+    display: flex;
+    justify-content: right;
+    list-style: none;
+  }
+
+  .navbar-menu li {
+    flex: 0 0 auto;
+    padding: 20px;
+  }
+
+  .navbar-menu a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .navbar-menu a:hover {
+    color: rgb(48, 86, 197);
+  }
+
+  .navbar-menu-mobile {
+    display: none;
   }
 }
 
@@ -237,10 +313,100 @@
 
 /* -- Mobile -- */
 @media screen and (min-width: 0px) {
+  body,
+  html {
+    font-family: "HelveticaNeue", sans-serif;
+    font-size: 16px;
+    background-color: #f1f1f1;
+    max-width: 100%;
+    /*overflow-x: hidden;*/
+  }
+
+  #section-title {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #section-title .container {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 2px solid black;
+  }
+
+  #section-title .left-section {
+    width: 55%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+    font-size: 16px;
+  }
+
+  #section-title .right-section {
+    width: 40%;
+    font-size: 16px;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+    line-height: 150%;
+    text-align: right;
+    font-weight: bold;
+  }
 }
 
 /* -- Ipad Pro -- */
-@media screen and (min-width: 450px) and (max-width: 991px) {
+@media screen and (min-width: 450px) and (max-width: 1023px) {
+  body,
+  html {
+    font-family: "HelveticaNeue", sans-serif;
+    font-size: 16px;
+    background-color: #f1f1f1;
+    max-width: 100%;
+    /*overflow-x: hidden;*/
+  }
+
+  #section-title {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 6vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #section-title .container {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 2px solid black;
+  }
+
+  #section-title .left-section {
+    width: 55%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+    font-size: 16px;
+  }
+
+  #section-title .right-section {
+    width: 40%;
+    font-size: 16px;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+    line-height: 150%;
+    text-align: right;
+    font-weight: bold;
+  }
 }
 
 /* -- Tablets -- */
@@ -256,6 +422,41 @@
     background-color: #f1f1f1;
     max-width: 100%;
     /*overflow-x: hidden;*/
+  }
+
+  #section-title {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 7vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #section-title .container {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 2px solid black;
+  }
+
+  #section-title .left-section {
+    width: 55%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
+
+  #section-title .right-section {
+    width: 40%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+    line-height: 150%;
+    text-align: right;
+    font-weight: bold;
   }
 }
 
