--- a/css/local.css
+++ b/css/local.css
@@ -15,7 +15,7 @@
 
   #hero {
     width: 100%;
-    height: 90vh;
+    height: 55vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -24,11 +24,11 @@
   #hero .container {
     width: 95%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
-  #hero .left-section {
-    width: 55%;
-    height: 25vh;
+  #hero .left-section-mobile {
+    width: 100%;
+    height: 30vh;
     /*
     background-color: rgb(223, 223, 253);
     border: 1px dashed;
@@ -39,8 +39,8 @@
   }
 
   #hero .right-section {
-    width: 45%;
-    height: 25vh;
+    width: 100%;
+    height: 30vh;
     /*background-color: rgb(204, 204, 252);
     border: 1px dashed;
     */
@@ -49,16 +49,20 @@
     justify-content: center; /* center items vertically, in this case */
   }
 
-  #hero .left-section .hero-header {
+  #hero .left-section-mobile .hero-header {
     /*font-size: 4.5vw;*/
-    font-size: 20px;
+    font-size: 25px;
     line-height: 95%;
     font-weight: bold;
   }
 
-  #hero .left-section p {
-    font-size: 12px;
+  #hero .left-section-mobile p {
+    font-size: 16px;
     line-height: 125%;
+  }
+
+  #hero .left-section {
+    display: none;
   }
 }
 
@@ -121,6 +125,10 @@
     font-size: 16px;
     line-height: 125%;
     width: 70%;
+  }
+
+  #hero .left-section-mobile {
+    display: none;
   }
 }
 
@@ -191,6 +199,10 @@
     font-size: 20px;
     line-height: 125%;
     width: 80%;
+  }
+
+  #hero .left-section-mobile {
+    display: none;
   }
 }
 
