--- a/css/local.css
+++ b/css/local.css
@@ -50,8 +50,8 @@
   }
 
   #hero .left-section-mobile .hero-header {
-    /*font-size: 4.5vw;*/
-    font-size: 35px;
+    font-size: 8.5vw;
+    /*font-size: 35px;*/
     line-height: 95%;
     font-weight: bold;
   }
@@ -115,8 +115,8 @@
   }
 
   #hero .left-section .hero-header {
-    /*font-size: 4.5vw;*/
-    font-size: 45px;
+    font-size: 4.5vw;
+    /*font-size: 45px;*/
     line-height: 95%;
     font-weight: bold;
   }
@@ -189,8 +189,8 @@
   }
 
   #hero .left-section .hero-header {
-    /*font-size: 4.5vw;*/
-    font-size: 75px;
+    font-size: 4.5vw;
+    /*font-size: 75px;*/
     line-height: 95%;
     font-weight: bold;
   }
@@ -224,12 +224,117 @@
     font-size: 20px;
     background-color: #f1f1f1;
     max-width: 100%;
-    /*overflow-x: hidden;*/
+  }
+
+  #services {
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #services .container {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid rgb(214, 214, 214);
+  }
+
+  #services .left-section {
+    width: 100%;
+    height: 10vh;
+    line-height: 60px;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    /* justify-content: center; /* center items vertically, in this case */
+  }
+
+  #services .left-section .services-header {
+    font-size: 26px;
+    line-height: 95%;
+    font-weight: bold;
+  }
+
+  #services .left-section p {
+    font-size: 26px;
+    line-height: 95%;
+  }
+
+  #services .right-section {
+    width: 100%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: space-between; /* center items vertically, in this case */
+    font-size: 14px;
+    line-height: 150%;
+  }
+
+  #services .right-section p {
+    width: 100%;
   }
 }
 
 /* -- Ipad Pro -- */
-@media screen and (min-width: 450px) and (max-width: 991px) {
+@media screen and (min-width: 450px) and (max-width: 1023px) {
+  body,
+  html {
+    font-family: "HelveticaNeue", sans-serif;
+    font-size: 20px;
+    background-color: #f1f1f1;
+    max-width: 100%;
+  }
+
+  #services {
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #services .container {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-bottom: 2px solid rgb(214, 214, 214);
+  }
+
+  #services .left-section {
+    width: 100%;
+    height: 13vh;
+    line-height: 60px;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    /*justify-content: center;  center items vertically, in this case */
+  }
+
+  #services .left-section .services-header {
+    font-size: 45px;
+    line-height: 95%;
+    font-weight: bold;
+  }
+
+  #services .left-section p {
+    font-size: 45px;
+    line-height: 95%;
+  }
+
+  #services .right-section {
+    width: 100%;
+    height: 50vh;
+    display: flex; /* establish flex container */
+    flex-direction: row; /* make main axis vertical */
+    justify-content: space-between; /* center items vertically, in this case */
+    font-size: 16px;
+    line-height: 150%;
+    padding-top: 50px;
+  }
+
+  #services .right-section p {
+    width: 45%;
+  }
 }
 
 /* -- Tablets -- */
@@ -244,6 +349,69 @@
     font-size: 20px;
     background-color: #f1f1f1;
     max-width: 100%;
+  }
+
+  #services {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #services .container {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 2px solid rgb(214, 214, 214);
+  }
+
+  #services .left-section {
+    width: 55%;
+    height: 50vh;
+    line-height: 60px;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    /*justify-content: center;  center items vertically, in this case */
+  }
+
+  #services .left-section .services-header {
+    font-size: 4vw;
+    /*font-size: 75px;*/
+    line-height: 95%;
+    font-weight: bold;
+  }
+
+  #services .left-section p {
+    font-size: 4vw;
+    /*font-size: 75px;*/
+    line-height: 95%;
+  }
+
+  #services .right-section {
+    width: 40%;
+    height: 50vh;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: start; /* center items vertically, in this case */
+    font-size: 20px;
+    line-height: 150%;
+    padding-top: 50px;
+  }
+
+  #services .right-section button {
+    border: 1px solid rgb(196, 196, 196);
+    width: 250px;
+    height: 60px;
+    display: inline-flex;
+    align-items: center;
+    font-size: 20px;
+  }
+
+  #services .right-section #button1 {
+    background-color: rgb(48, 86, 197);
+    color: white;
   }
 }
 
