--- a/css/root.css
+++ b/css/root.css
@@ -116,7 +116,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     background-size: 1000px;
-    background-position: right -50px;
+    background-position: right -150px;
   }
 
   nav a {
@@ -188,8 +188,8 @@
     /*overflow-x: hidden;*/
     background-image: url("/images/Ellipse1.svg");
     background-repeat: no-repeat;
-    background-size: 2000px;
-    background-position: right -300px;
+    background-size: 1900px;
+    background-position: right -335px;
   }
 
   nav a {
@@ -329,6 +329,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background-color: #f1f1f1;
   }
 
   #section-title .container {
@@ -378,6 +379,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background-color: #f1f1f1;
   }
 
   #section-title .container {
@@ -427,7 +429,7 @@
     position: sticky;
     top: 0;
     width: 100%;
-    height: 7vh;
+    height: 8vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
