--- a/css/local.css
+++ b/css/local.css
@@ -1163,6 +1163,7 @@
 
   #blog {
     width: 100%;
+    height: 90vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -1180,7 +1181,7 @@
 
   #blog .blog-element {
     width: 100%;
-    height: 30%;
+    height: 12%;
     border-bottom: 1px solid #a9a9a9;
     margin-bottom: 2%;
     text-decoration: none;
@@ -1241,6 +1242,7 @@
 
   #blog {
     width: 100%;
+    height: 45vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -1263,7 +1265,7 @@
 
   #blog .blog-element {
     width: 26%;
-    height: 80%;
+    height: 45%;
     border: 1px solid #a9a9a9;
     margin-bottom: 2%;
     text-decoration: none;
@@ -1325,6 +1327,7 @@
 
   #blog {
     width: 100%;
+    height: 90vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -1347,7 +1350,7 @@
 
   #blog .blog-element {
     width: 29%;
-    height: 80%;
+    height: 45%;
     border: 1px solid #a9a9a9;
     margin-bottom: 2%;
     text-decoration: none;
