--- a/css/root.css
+++ b/css/root.css
@@ -284,7 +284,6 @@ body {
 
   #footer {
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -583,6 +582,35 @@ body {
     padding-left: 2.5%;
     padding-right: 2.5%;
   }
+
+  .socials .container .socials-left {
+    width: 30%;
+    text-align: left;
+    font-weight: bold;
+    font-size: 16px;
+  }
+  .socials .container .socials-middle {
+    width: 30%;
+    text-align: center;
+  }
+
+  .socials .container .socials-middle img {
+    width: 20px;
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+
+  .socials .container .socials-right {
+    width: 30%;
+    text-align: right;
+  }
+
+  .socials .container .socials-right a {
+    text-decoration: none;
+    color: #939393;
+    padding-left: 10px;
+    font-size: 16px;
+  }
 }
 
 /* -- Tablets -- */
@@ -734,6 +762,33 @@ body {
     justify-content: space-between;
     padding-left: 2.5%;
     padding-right: 2.5%;
+  }
+
+  .socials .container .socials-left {
+    width: 30%;
+    text-align: left;
+    font-weight: bold;
+  }
+  .socials .container .socials-middle {
+    width: 30%;
+    text-align: center;
+  }
+
+  .socials .container .socials-middle img {
+    width: 26px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .socials .container .socials-right {
+    width: 30%;
+    text-align: right;
+  }
+
+  .socials .container .socials-right a {
+    text-decoration: none;
+    color: #939393;
+    padding-left: 10px;
   }
 }
 
