--- a/css/root.css
+++ b/css/root.css
@@ -43,7 +43,7 @@
   z-index: 100;
 }
 
-*/ body {
+body {
   overscroll-behavior-y: none;
 }
 
@@ -658,7 +658,6 @@
 
   #footer {
     width: 100%;
-    height: 50vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -725,9 +724,10 @@
   }
 
   #footer .right-section p {
-    width: 75%;
+    width: 85%;
     margin-bottom: 125px;
     display: initial;
+    font-size: 20px;
   }
 
   #footer .right-section .footer-services {
@@ -742,6 +742,7 @@
     .footer-services-section
     .services-section-header {
     font-weight: bold;
+    font-size: 22px;
   }
 
   #footer
@@ -750,6 +751,7 @@
     .footer-services-section
     .services-section-label {
     padding-top: 25px;
+    font-size: 20px;
   }
 
   #footer .left-section .footer-menu .footer-menu-link {
